2003-07-26  Peter Fales <peter@fales-lorenz.net>
	* sanei/Makefile.in, backend/cderror.h, backend/jinclude.h,
	  backend/dc210.c, backend/dc240.c, backend/ gphoto2.c, 
	  backend/djpeg.c, backend/cdjpeg.h, backend/Makefile.in, configure
	  configure.in:  Move jpeg support file to sanei directory, header
	  files to include/sane, and associated configure changes

2003-07-26  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/sane/sanei.h include/sane/sanei_codec_ascii.h
	  include/sane/sanei_codec_bin.h include/sane/saneopts.h: Changed
	  license to GPL + SANE exception.
	* AUTHORS frontend/scanimage.c: Updated email address of Andreas
	  Beck.
	* include/lalloca.h include/lassert.h: Changed
	  license to GPL + SANE exception.
	* LICENSE: Clarify that not all backends us GPL + SANE exception.
	  Fixed pointer to README.djpeg.

2003-07-25  Peter Fales <peter@fales-lorenz.net>
	* include/sane/sanei_cderror.h, include/sane/sanei_jinclude.h 
	  include/sane/sanei_jpeg.h sanei/sanei_jpeg.c:  Install these
	  files as copies of the ones currently in backend.  (The old
	  files will be deleted later)
	* Moved backend/djpeg.README to README.djpeg and added usage info
	 
2003-07-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf doc/sane-gt68xx.man
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES: Added
	  Fujitsu 1200CUS to man page, .conf and .desc. Changed .conf file
	  to be more readable.  Added RevScan 19200i to .conf file.  Added
	  Plustek U16B to .desc and .conf, updated UT16B.
	* po/sane-backends.de.po: Added some translations for the HP
	  backend. Minor header updates.
	* po/sane-backends.cs.po po/sane-backends.es.po po/sane-backends.fr.po
	  po/sane-backends.nl.po po/sane-backends.no.po po/sane-backends.pt.po
	  po/sane-backends.ru.po po/sane-backends.sv.po: Regenerated to include
	  recent changes in the backends.
	* include/sane/sanei_scsi.h include/sane/sanei_wire.h:  Changed