@@ -20,6 +20,27 @@
   Foundation, Inc., 59 Temple Place - Suite 330, Boston,
   MA 02111-1307, USA.
 
+  As a special exception, the authors of SANE give permission for
+  additional uses of the libraries contained in this release of SANE.
+
+  The exception is that, if you link a SANE library with other files
+  to produce an executable, this does not by itself cause the
+  resulting executable to be covered by the GNU General Public
+  License.  Your use of that executable is in no way restricted on
+  account of linking the SANE library code into it.
+
+  This exception does not, however, invalidate any other reasons why
+  the executable file might be covered by the GNU General Public
+  License.
+
+  If you submit changes to SANE to the maintainers to be included in
+  a subsequent release, you agree by submitting the changes that
+  those changes may be distributed with this exception intact.
+
+  If you write modifications of your own for SANE, it is your choice
+  whether to permit this exception to apply to your modifications.
+  If you do not wish that, delete this exception notice.
+
   This file implements USB equivalents to the SCSI routines used by the Snapscan
   backend.
   
@@ -435,6 +456,9 @@ static SANE_Status usb_request_sense(SnapScan_Scanner *pss) {
 
 /*
  * $Log$
+ * Revision 1.12  2003/07/26 17:16:55  oliverschwartz
+ * Changed licence to GPL + SANE exception for snapscan-usb.[ch]
+ *
  * Revision 1.11  2002/07/12 23:29:06  oliverschwartz
  * SnapScan backend 1.4.15
  *
